# hdm

./: .gitignore  CARGO_CHECK_OPTIMIZATION.md  DOWNLOAD_GROUPS_PLAN.md  PREDICTIVE_FAILURE_PLAN.md  app_section.txt  capture_app.ps1  capture_final.ps1  capture_tauri.ps1  cargo_check_output.txt  feature_analysis.md  git_status.txt  hdm.txt  hdm2.txt  hyperstream.code-workspace  incomplete_features.md  kill_port.ps1  screenshot.ps1  test_results.txt  test_status.txt
.agents/skills/frontend-design/: SKILL.md
.github/: copilot-instructions.md
.serena/: project.yml
hyperstream/: .gitignore  CIRCUIT_BREAKER_IMPLEMENTATION_SUMMARY.md  CIRCUIT_BREAKER_PLAN.md  CIRCUIT_BREAKER_SESSION_SUMMARY.md  COMPILATION_VERIFICATION.md  FAILURE_PREDICTION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION_REPORT.md  MIRROR_SCORING.md  PREFLIGHT_ANALYSIS_GUIDE.md  PREFLIGHT_ENGINE_SUMMARY.md  QUEUE_ORCHESTRATOR_GUIDE.md  README.md  SPEED_ACCELERATION.md  backend_cmds.txt  check_output.txt  check_output2.txt  frontend_cmds.txt  index.html  jest.config.js  package-lock.json  package.json  readme_extension.txt  registered_cmds.txt  tsc_output.txt  tsconfig.json  unwired_cmds.txt  vite.config.ts
hyperstream/.agents/rules/: code-style-guide.md
hyperstream/browser-extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
hyperstream/extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
hyperstream/extension/tests/: popup.test.ts
hyperstream/screenshots/: capture.ps1
hyperstream/scripts/: README.md  build-windows.ps1  cargo-check-fast.ps1  clean_lib.py  fix_syntax.py  refactor_master.py  replace_alerts.py  split_lib.py  split_lib_v2.py  split_lib_v3.py  split_lib_v5.py
hyperstream/src/: App.css  App.tsx  App.tsx.part  Overlay.tsx  index.css  main.tsx
hyperstream/src-tauri/: .gitignore  Cargo.toml  build.rs  build_check_2.txt  build_check_3.txt  build_check_4.txt  build_check_6.txt  build_check_7.txt  build_check_9.txt  build_check_final.txt  build_check_final_3.txt  build_check_final_4.txt  build_check_final_5.txt  build_check_final_6.txt  build_check_send.txt  build_error.txt  build_error_10.txt  build_error_11.txt  build_error_12.txt  build_error_13.txt  build_error_14.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_error_5.txt  build_error_7.txt  build_error_9.txt  build_error_L3.txt  build_error_final.txt  build_error_final_2.txt  build_error_full.txt  build_error_ninja_ps.txt  build_errors.txt  build_log.txt  check.txt  check2.txt  check_error.txt  check_error_ninja.txt  check_error_ninja_2.txt  check_error_ninja_3.txt  (+14 more)
hyperstream/src-tauri/.cargo/: config.toml
hyperstream/src-tauri/src/: adaptive_threads.rs  api_replay.rs  archive_manager.rs  audio_events.rs  auto_extract.rs  auto_recovery.rs  bandwidth_allocator.rs  bandwidth_arb.rs  bandwidth_history.rs  c2pa_validator.rs  cas_manager.rs  clipboard.rs  cloud_bridge.rs  commands.rs  connection_pool.rs  core_state.rs  crash_recovery.rs  dlna_cast.rs  docker_pull.rs  doi_resolver.rs  download_groups.rs  download_history.rs  download_history_analytics.rs  download_recovery.rs  ephemeral_server.rs  event_bus.rs  event_sourcing.rs  failure_prediction.rs  failure_prediction_commands.rs  feeds.rs  file_categorizer.rs  geofence.rs  git_lfs.rs  group_atomic_ops.rs  group_batch_detector.rs  group_commands.rs  group_dag_solver.rs  group_engine.rs  group_error_handler.rs  group_metrics.rs  (+69 more)
hyperstream/src-tauri/src/ai/: mod.rs  upscale.rs
hyperstream/src-tauri/src/commands/: advanced_group_cmds.rs  download_groups_cmds.rs  download_history_commands.rs  group_metrics_cmds.rs  mirror_scoring_cmds.rs  mod.rs  preflight_commands.rs  queue_manager_cmds.rs  queue_orchestrator_commands.rs  resilience_cmds.rs  segment_integrity_cmds.rs  settings_cmds.rs  state_management_cmds.rs
hyperstream/src-tauri/src/downloader/: disk.rs  http_client.rs  initialization.rs  manager.rs  mod.rs  network.rs  structures.rs
hyperstream/src-tauri/src/engine/: dash.rs  hls.rs  intent.rs  materializer.rs  mod.rs  multi_source.rs  session.rs  session_group_tests.rs  swarm.rs
hyperstream/src-tauri/src/media/: dash_parser.rs  decrypt.rs  hls_parser.rs  mod.rs  muxer.rs  sounds.rs
hyperstream/src-tauri/src/network/: chaos.rs  chatops.rs  connection_manager.rs  headers.rs  masq.rs  mirror_aggregator.rs  mirror_scout.rs  mod.rs  p2p.rs  sni_fragment.rs  sync_client.rs  tls_ja3.rs  tor.rs  wfp.rs
hyperstream/src-tauri/src/network/bittorrent/: manager.rs
hyperstream/src-tauri/src/network/differential/: mod.rs
hyperstream/src-tauri/src/plugin_vm/: lua_host.rs  manager.rs  mod.rs  updater.rs
hyperstream/src-tauri/src/resilience/: circuit_breaker.rs  circuit_breaker_manager.rs  error_types.rs  failover_metrics.rs  mod.rs
hyperstream/src-tauri/src/tests/: segment_integrity_tests.rs  session_state_tests.rs
hyperstream/src-tauri/tests/: settings_cache_integration.rs  settings_cache_tests.rs
hyperstream/src/api/: commands.test.ts  commands.ts  failurePredictionApi.ts  mirrorAnalyticsApi.ts  parallelMirrorApi.ts  recoveryApi.ts  settingsCache.ts  smartRouteApi.ts  speedAccelerationApi.ts
hyperstream/src/components/: ActivityTab.tsx  AddDownloadModal.tsx  AddTorrentModal.tsx  AdvancedGroupDashboard.tsx  BatchDownloadModal.tsx  CircuitBreakerDashboard.tsx  ClipboardToast.tsx  CorruptionRecoveryPanel.tsx  CrashRecoveryModal.tsx  DashboardStats.tsx  DownloadExpandedPanel.tsx  DownloadGroupManager.tsx  DownloadGroupTree.tsx  DownloadHistoryAnalytics.tsx  DownloadItem.tsx  DownloadItemActions.tsx  DownloadItemIcon.tsx  DownloadItemInfo.tsx  DownloadList.test.tsx  DownloadList.tsx  DownloadStateComponents.tsx  DropTarget.tsx  ErrorBoundary.tsx  FeedsTab.tsx  GlobalTelemetry.tsx  GroupDependencyVisualizer.tsx  GroupProgressBar.tsx  HistoryTab.tsx  IpfsDownloadModal.tsx  LanPairing.tsx  Layout.tsx  MediaProcessingModal.tsx  MirrorScoringDashboard.tsx  NetworkDiagnosticsModal.tsx  OptimizedDownloadList.tsx  P2PShareModal.tsx  PluginEditor.tsx  (+23 more)
scripts/: package-extension.ps1
(+38 files in other folders)
