[package]
name = "hyperstream"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperstream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


# CRT Fix: Force boring-sys related crates to build in release mode to avoid msvcrtd/msvcrt mismatch
[profile.dev.package.boring-sys2]
opt-level = 3

[profile.dev.package.boring2]
opt-level = 3

[profile.dev.package.tokio-boring2]
opt-level = 3

[profile.dev.package.boring-sys]
opt-level = 3

[profile.dev.package.boring]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use reqwest-impersonate as drop-in replacement for reqwest (Aliasing)
# Revert to standard reqwest due to crate issues
# IMPERSONATE: Using reqwest-impersonate to spoof JA3 fingerprint
# Revert to standard reqwest due to crate issues
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "brotli", "gzip", "deflate", "cookies"] }
rquest = { version = "5.1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
warp = "0.3"
lazy_static = "1.4"
arboard = "3.2"
regex = "1"
chrono = { version = "0.4.42", features = ["serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_IO", "Win32_System_Ioctl"] }
m3u8-rs = "6.0.0"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "async", "send"] }
url = "2.5.7"
zip = "6.0.0"
uuid = { version = "1.19.0", features = ["v4"] }
local-ip-address = "0.6.5"
rand = "0.9.2"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
hex = "0.4"
which = "6.0"
dashmap = "6.1.0"
socket2 = "0.6.1"
librqbit = "8.1.1"
tokio-util = "0.7.17"
bytes = "1.11.0"
anyhow = "1.0.100"

