[package]
name = "hyperstream"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "hyperstream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperstream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# CRT Fix: Force boring-sys related crates to build in release mode to avoid msvcrtd/msvcrt mismatch
[profile.dev.package.boring-sys2]
opt-level = 3

[profile.dev.package.boring2]
opt-level = 3

[profile.dev.package.tokio-boring2]
opt-level = 3


# Release Profile Optimization
[profile.release]
codegen-units = 1 # Maximize optimization at cost of compile time
lto = true        # Link Time Optimization
panic = "abort"   # Remove unwind tables, smaller binary
strip = true      # Strip symbols
opt-level = 3     # Max optimization

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use reqwest-impersonate as drop-in replacement for reqwest (Aliasing)
# Revert to standard reqwest due to crate issues
# IMPERSONATE: Using reqwest-impersonate to spoof JA3 fingerprint
# Revert to standard reqwest due to crate issues
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "brotli", "gzip", "deflate", "cookies", "multipart"] }
rquest = { version = "5.1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
once_cell = "1.19"
tokio-stream = "0.1"
warp = "0.3"
lazy_static = "1.4"
arboard = "3.2"
feed-rs = "1.3"
mlua = { version = "0.9", features = ["lua54", "vendored", "async", "send"] }
regex = "1"
chrono = { version = "0.4.42", features = ["serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_IO", "Win32_System_Ioctl", "Win32_System_Power"] }
m3u8-rs = "6.0.0"
url = "2.5.7"
zip = "6.0.0"
uuid = { version = "1.19.0", features = ["v4"] }
local-ip-address = "0.6.5"
dav-server = { version = "0.7.0", features = ["warp-compat"] }
headers = "0.3"
htmlescape = "0.3"
rust-s3 = "0.35.1"
rand = "0.9.2"
aes = "0.8"
cbc = "0.1"
block-padding = "0.3"
hex = "0.4"
which = "6.0"
dashmap = "6.1.0"
socket2 = "0.6.1"
librqbit = "8.1.1"
tokio-util = "0.7.17"
bytes = "1.11.0"
anyhow = "1.0.100"
sysinfo = "0.37.2"
rodio = "0.17"
flate2 = "1.1.5"
dirs = "6.0.0"
arti-client = { version = "0.24.0", features = ["tokio", "native-tls"] }
tor-rtcompat = { version = "0.24.0", features = ["tokio", "native-tls"] }
fastembed = "4"
lopdf = "0.32.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
md5 = "0.7.0"
rumqttc = "0.25.1"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.4"
urlencoding = "2"
rfd = "0.15"
async-trait = "0.1"
dunce = "1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
